k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-clone
  namespace: netflix
spec:
  type: ClusterIP
  selector:
    app: netflix-clone
  ports:
    - name: http
      port: 80
      targetPort: 3000
